grammar/ingreedy.peg
start
  = ingredient_addition

ingredient_addition
  = amount:amount? (ws+)? container:container? unit:unit? (ws+)? ingredient:ingredient? [\n]?  {
    var result = {
      amount: amount,
      container: container,
      unit: unit,
      ingredient: ingredient
    };

    for(var i in result) {
      if(result[i] === null || result[i] === undefined) {
        delete result[i];
      }
    }

    return result;
  }


amount
  = float
  / mixed_number
  / fraction
  / integer


container
  = "("? ingredient:ingredient? amount:amount (ws+)? unit:unit")"? {
    return {ingredient:ingredient, amount: amount, unit: unit };
  }

ws
  = " "
  / [\t]

space
  = " "

ingredient
  = phrase

phrase
  = $(word (space word)*)

word
  = letters:letter+ { return letters.join(''); }

float
  = $(integer? [.] integer)

mixed_number
  = $(integer space fraction)

fraction
  = $(integer [/] integer)

integer
  = digits:[0-9]+ { return digits.join(''); }


letter
  = [a-zA-Z\u00E4\u00F6\u00FC\u00C4\u00D6\u00DC\u00df()]

unit
  = $(german_unit !letter)
  / $(metric_unit !letter)
  / $(imprecise_unit !letter)

german_unit
  = Tasse
  / loeffel
  
Tasse
  = 'tasse'i 'n'?
  / 'tas.'i
  

loeffel
  = 'löffel'i
  / 'teeloeffel'i
  / 'teelöffel'i
  / 'el'i
  / 'lfl.'i
  / 'lfl'i
  / 'tl.'i
  / 'tl'i

metric_unit
  = gramm
  / kilogramm
  / liter
  / Pfund

gramm
  = 'gramm'i
  / 'gram'i
  / 'gr.'i
  / 'gr'i
  / 'g.'i
  / 'g'i

kilogramm
  = 'kilogramm'i
  / 'kilogram'i
  / 'kg.'i
  / 'kg'i

liter
  = 'liter'i
  / 'ltr.'i
  / 'ltr'i
  / 'l.'i
  / 'l'i

Pfund
  = 'pfund'i
  / 'pfd.'i
  / 'pfd'i

imprecise_unit
  = gestrichener
  / handvolle
  / prisen
  / stangen
  / dose
  / bund
  / koerniger

gestrichener
  = 'gestrichener'i
  / 'gestrichene'i
  / 'gestrichen'i

handvolle
  = 'handvolle'i
  / 'handvoll'i
  / 'handvol'i

prisen
  = 'prisen'i
  / 'prise'i

stangen
 = 'stangen'i
 / 'stange'i
 
 dose
 = 'dose'i
 / 'dosen'i

 bund
 = 'bund'i 
 
 koerniger
 = 'koerniger'i
 / 'körniger'i 
 / 'körnige'i 
